syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resources";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/common/common.proto";

package dev.multy.resources;

message CreateKubernetesNodePoolRequest {
  repeated CloudSpecificKubernetesNodePoolArgs resources = 1;
}

message ReadKubernetesNodePoolRequest {
  string resource_id = 1;
}

message UpdateKubernetesNodePoolRequest {
  string resource_id = 1;
  repeated CloudSpecificKubernetesNodePoolArgs resources = 2;
}

message DeleteKubernetesNodePoolRequest {
  string resource_id = 1;
}

message CloudSpecificKubernetesNodePoolArgs {
  common.CloudSpecificChildResourceCommonArgs common_parameters = 1;
  string name = 2;
  repeated string subnet_ids = 3;
  string cluster_id = 4;
  bool is_default_pool = 5;
  int32 starting_node_count = 6;
  int32 min_node_count = 7;
  int32 max_node_count = 8;
  common.VmSize.Enum vm_size = 9;
  int64 disk_size_gb = 10;

  map<string, string> labels = 11;

}

message CloudSpecificKubernetesNodePoolResource {
  common.CloudSpecificCommonChildResourceParameters common_parameters = 1;
  string name = 2;
  repeated string subnet_ids = 3;
  string cluster_id = 4;
  bool is_default_pool = 5;
  int32 starting_node_count = 6;
  int32 min_node_count = 7;
  int32 max_node_count = 8;
  common.VmSize.Enum vm_size = 9;
  int64 disk_size_gb = 10;

  map<string, string> labels = 11;
}

message KubernetesNodePoolResource {
  common.CommonResourceParameters common_parameters = 1;
  repeated CloudSpecificKubernetesNodePoolResource resources = 2;
}
